force-app/main/default/objects/leaseworks__Event_Forecast__c/leaseworks__Event_Forecast__c.object-meta.xml
<CustomObject>
    <description>[MODULE: NA]
[LOAD: No]
[PREREQUISITES: NA]
[REPLACEMENT OBJECT API: NA]
[COMMENTS: NA]</description>
    <label>Z_Unused_NotDeletable_2012 EventForecast</label>
    <nameField>
        <label>Z_Unused_NotDeletable_2012EventForecastN</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Z_Unused_NotDeletable_2012 EventForecast</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>