force-app/main/default/objects/leaseworks__Event_Forecast__c/fields/leaseworks__Avg_Unit_Utilisation_Per_Month__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Avg_Unit_Utilisation_Per_Month__c</fullName>
    <description>This is based on 12 month basis or less (if data is unavailable). Calculation skips over months where utilization is zero.</description>
    <inlineHelpText>This is based on 12 month basis or less (if data is unavailable). Calculation skips over months where utilization is zero.</inlineHelpText>
    <label>Avg Unit Used for Remaining Life</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>