force-app/main/default/objects/leaseworks__Event_Forecast__c/fields/leaseworks__Event_Cost_End_Of_Lease__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Event_Cost_End_Of_Lease__c</fullName>
    <label>Event Cost (End Of Lease)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>