force-app/main/default/objects/leaseworks__Event_Forecast__c/fields/leaseworks__Event_Phase_F__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Event_Phase_F__c</fullName>
    <formula>/* check first 3 character of type__c */
case( LEFT(Text(leaseworks__Type__c),3), &#39;LLP&#39; ,null
,&#39;Hea&#39; , Text(leaseworks__Aircraft__r.leaseworks__Event_Phase__c)
,&#39;C-C&#39; , Text(leaseworks__Aircraft__r.leaseworks__Event_Phase__c)
,&#39;Oth&#39; , Text(leaseworks__Aircraft__r.leaseworks__Event_Phase__c)
, Text(leaseworks__Assembly__r.leaseworks__Event_Phase__c )
)</formula>
    <label>Event Phase</label>
    <type>Text</type>
</CustomField>