force-app/main/default/objects/leaseworks__Event_Forecast__c/fields/leaseworks__Lowest_Limiter_LLP_End_Of_Lease__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Lowest_Limiter_LLP_End_Of_Lease__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lowest Limiter LLP (End Of Lease)</label>
    <referenceTo>leaseworks__Sub_Components_LLPs__c</referenceTo>
    <relationshipLabel>Event Forecast (Lowest Limiter LLP (End Of Lease))</relationshipLabel>
    <relationshipName>Event_Forecast2</relationshipName>
    <type>Lookup</type>
</CustomField>