force-app/main/default/objects/leaseworks__Event_Forecast__c/fields/leaseworks__MSN_Event__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__MSN_Event__c</fullName>
    <formula>leaseworks__Aircraft__r.leaseworks__MSN_Number__c +&apos;-&apos;+ Text(leaseworks__Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MSN - Event</label>
    <type>Text</type>
</CustomField>