force-app/main/default/objects/leaseworks__Event_Forecast__c/fields/leaseworks__MX_Interval__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__MX_Interval__c</fullName>
    <label>MX Interval</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>