force-app/main/default/objects/leaseworks__Event_Forecast__c/fields/leaseworks__Rate_Unit_F__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Rate_Unit_F__c</fullName>
    <formula>case( leaseworks__Rate_Basis_As_Per_Lease__c, &apos;Months&apos; ,&apos;Calendar&apos;
,&apos;Hours&apos; ,if(Text(leaseworks__Type__c)==&apos;APU&apos; ,&apos;Hours&apos; , &apos;FH&apos;)
,&apos;FC&apos;
)</formula>
    <label>Rate Unit</label>
    <type>Text</type>
</CustomField>