force-app/main/default/objects/leaseworks__Event_Forecast__c/fields/leaseworks__Reserve_Balance__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Reserve_Balance__c</fullName>
    <label>Reserve Balance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>