force-app/main/default/objects/leaseworks__Event_Forecast__c/fields/leaseworks__TSLV_CSLV__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__TSLV_CSLV__c</fullName>
    <label>TSLV Or CSLV Or Months SLV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>