force-app/main/default/objects/leaseworks__Event_Forecast__c/listViews/leaseworks__All.listView-meta.xml
<ListView>
    <fullName>leaseworks__All</fullName>
    <columns>leaseworks__Aircraft__c</columns>
    <columns>NAME</columns>
    <columns>leaseworks__Event_Phase_F__c</columns>
    <columns>leaseworks__Current_FH_FC__c</columns>
    <columns>leaseworks__Current_MR_Balance_F__c</columns>
    <columns>leaseworks__Rate_Unit_F__c</columns>
    <columns>leaseworks__Next_Event_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>